Adding integration layer with external API.
